<resources>
    <string name="app_name">Attendance</string>
    <string name="title_home">Home</string>
    <string name="title_manager">Manage</string>
    <string name="title_me">Me</string>
    <string name="mac">设备mac:</string>
    <string name="date">date:</string>
    <string name="first_time">first_time:</string>
    <string name="last_time">last_time:</string>
    <string name="loading">正在加载请稍后...</string>
    <string name="title_date">日期</string>
    <string name="title_signIn">签到</string>
    <string name="title_signOut">签退</string>
    <string name="username">姓名</string>
    <string name="tel_num">手机号</string>
    <string name="email">邮箱</string>
    <string name="apply">申请</string>
    <string name="my_apply">我的申请列表</string>
    <string name="approval">审批</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">无效用户名(正确格式:姓名_id)</string>
    <string name="error_invalid_password">密码长度至少6位</string>
    <string name="error_same_password">密码不能与初始密码相同</string>
    <string name="error_invalid_reviewpw">两次密码输入不相同</string>
    <string name="error_invalid_mac">mac格式有误</string>
    <string name="error_invalid_phone">无效手机号</string>
    <string name="error_invalid_email">邮箱格式有误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">不能为空</string>
    <string name="error_modify_same">修改值不能与原值相同</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="head">头像</string>
    <string name="login">登录</string>
    <string name="account">account</string>
    <string name="password">password</string>
    <string name="forget">忘记密码>></string>
    <string name="separator">|</string>
    <string name="register_link">用户须知</string>
    <string name="register">注册</string>
    <string name="summit">提交修改</string>
    <string name="userName">用户名：</string>
    <string name="password_c">密码：</string>
    <string name="makesure">确认密码：</string>
    <string name="checkCode">验证码：</string>
    <string name="registerTitle">重置密码并完善用户信息</string>
    <string name="registerPassword">请重置密码</string>
    <string name="registerPhone">请输入手机号</string>
    <string name="registerEmail">常用邮箱地址</string>
    <string name="registerSurePW">请确认密码</string>
    <string name="registerCheckCode">验证码</string>
    <string name="login_success">登录成功</string>
    <string name="unknown_error">未知错误</string>
    <string name="mac_review_login">注意：请确保该mac为本设备mac无误，否则将影响考勤记录！校验路径：设置->关于本机->状态消息->WLAN地址</string>
    <string name="mac_register_content">mac为员工考勤记录依据，请检查该mac为本设备mac无误，否则将影响考勤记录！</string>
    <string name="mac_register_path">校验路径：设置->关于本机->状态消息->WLAN地址</string>
    <string name="mac_review_attention">警告：立即点击校验设备mac</string>
    <string name="mac_modify_attention">说明：修改绑定mac需向直属Leader发出申请，审批通过后修改生效</string>

    <!-- apply and approval -->
    <string name="apply_item">申请事项</string>
    <string name="apply_start_time">开始时间</string>
    <string name="apply_end_time">结束时间</string>
    <string name="apply_editor">编辑申请</string>
    <string name="apply_detail">请输入你的申请理由陈述：</string>
    <string name="apply_leave">请假</string>
    <string name="apply_overtime">加班</string>
    <string name="apply_business_trip">出差</string>
    <string name="apply_others">其它</string>
</resources>
