<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray" />
    <TextView
        android:id="@+id/tv_apply_leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/apply_leave"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray"/>
    <TextView
        android:id="@+id/tv_apply_overtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/apply_overtime"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray"/>
    <TextView
        android:id="@+id/tv_apply_business_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/apply_business_trip"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray"/>
    <TextView
        android:id="@+id/tv_apply_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/apply_others"/>
</LinearLayout>