<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/apply"
        android:padding="14dp"
        android:src="@mipmap/ic_launcher_round" />

    <RelativeLayout
        android:id="@+id/rl_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/permission_rationale"
            android:singleLine="true"
            android:ellipsize="end"
            android:maxEms="25"/>

        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/mac_register_content"
            android:singleLine="true"
            android:ellipsize="end"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/apply"
        android:src="@drawable/waiting"/>
</LinearLayout>