<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context="com.zy.attendance.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/head"/>

        <LinearLayout
            android:id="@+id/ll_account"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal"
            android:background="@drawable/editbg"
            android:layout_below="@id/image"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/user"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/account"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:textColor="@color/text_gray"
                android:background="@null"/>

            <Button
                android:id="@+id/btn_clearAccount"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/cross"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal"
            android:background="@drawable/editbg"
            android:layout_below="@id/ll_account"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@id/ll_account"
            android:layout_alignRight="@id/ll_account">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/key"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:textColor="@color/text_gray"
                android:background="@null"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_seePassword"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/eye"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_password"
            android:layout_marginTop="10dp"
            android:layout_alignRight="@id/ll_password"
            android:text="@string/forget"
            android:textColor="@color/colorPrimary"
            android:linksClickable="true"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_forget"
            android:layout_alignLeft="@id/ll_account"
            android:layout_alignRight="@id/ll_account">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_below="@id/tv_forget"
                android:layout_marginTop="30dp"
                android:layout_alignLeft="@id/ll_account"
                android:layout_alignRight="@id/ll_account"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_login"/>
        </FrameLayout>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_forget"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:linksClickable="true"
            android:text="@string/register_link"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>
