<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zy.attendance.ApplyEditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_editor"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/iv_apply_yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/yes"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/activity_vertical_margin"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_apply_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_cards_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/apply_item"/>
        <ImageView
            android:id="@+id/iv_apply_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/card_enter"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_apply_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:gravity="end"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_apply_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_cards_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/apply_start_time"/>
        <ImageView
            android:id="@+id/iv_apply_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/card_enter"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_apply_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:gravity="end"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_apply_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_cards_bg"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/apply_end_time"/>
        <ImageView
            android:id="@+id/iv_apply_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/card_enter"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/tv_apply_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:gravity="end"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/common_cards_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_apply_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/apply_detail"
            android:textSize="16sp"
            android:textColor="@color/text_gray"
            android:background="@null"/>
    </LinearLayout>
</LinearLayout>